[package]
name = "GPT-3LanguageTutorChatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = {version = "3.2.22", features = ["derive"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4.0"
#isolang = "2.1.0"